<resources>
    <string name="app_name">About Me</string>
    <string name="action_settings">Settings</string>
    <string name="button_text">Text</string>
    <string name="button_image">Image</string>
    <string name="button_web">Web</string>
    <string name="button_toast">Toast</string>
    <string name="button_dialog">Dialog</string>
    <string name="title_activity_text">Notes About Me</string>
    <string name="title_activity_image">My Image</string>
    <string name="dialog_message">Are you happy?</string>
    <string name="dialog_title">Decisions</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>
